# html2md4llm

./: .gitignore  CLAUDE.md  DIFY_INSTALLATION.md  KEYS.md  LICENSE  MIGRATION_GUIDE.md  README.md  build.js  html2md4llm.public.pem  package-lock.json  package.json  test_python.py
.github/workflows/: ci.yml  publish.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
lib/: utils.py
plugin/: .difyignore  PRIVACY.md  main.js  main.py  manifest.json  manifest.yaml  pyproject.toml  requirements.txt
plugin/lib/: __init__.py  main.py  markdown.py  parser.py
plugin/provider/: html2md4llm.py  html2md4llm.yaml
plugin/tools/json/: config.yaml  invoke.py
plugin/tools/markdown/: config.yaml  invoke.py
specs/001-html-to-md-json/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.js  parser.js  utils.js
src/generators/: markdown.js
tests/: cli.test.js  flatten-containers.test.js  integration.test.js  markdown-spacing.test.js  real-world.test.js  run-tests.js  us2-cleaning.test.js  us2-edge-cases.test.js  us3-list-strategy.test.js  us4-article-strategy.test.js  us5-json-output.test.js  us6-markdown-table.test.js  us7-unescape-html.test.js
tests/fixtures/: apple-frag-1.html  apple-frag-head.html  apple-frag-li.html  apple.html  img-empty-p-hr-h2.html  mp-format-test.html  mp-full.html  mp.html  simple.html
tests/output/: apple-frag-1.json  apple-frag-1.md  apple-frag-head.json  apple-frag-head.md  apple-frag-li.json  apple-frag-li.md  apple.json  apple.md  mp-full.json  (+9 more)
(+2 files in other folders)
